Bug 571352 - <select multiple> does not reset the anchor <option> properly when the anchor is removed.  r=bzbarsky